--- a/apps/keyboard/style/keyboard.css
+++ b/apps/keyboard/style/keyboard.css
@@ -134,7 +134,7 @@ button::-moz-focus-inner {
 .keyboard-key.highlighted > .visual-wrapper > span:after {
   content: attr(data-label);
   position: absolute;
-  top: -5.4rem;
+  top: -5.8rem;
   left: calc(50% - 2.8rem);
   width: 5.6rem;
   height: 5.6rem;
@@ -146,6 +146,23 @@ button::-moz-focus-inner {
   background-color: #00aacc;
 }
 
+.keyboard-key.highlighted {
+  background-color: #4a5255;
+}
+
+.keyboard-key:last-child > .visual-wrapper > span {
+  border-right: transparent;
+}
+
+.keyboard-key.highlighted > .visual-wrapper > span {
+  color: #00caf2;
+  background-color: #4a5255;
+}
+
+/* Show the bubble text when the button is highlighted. */
+.keyboard-key.highlighted > .visual-wrapper > span:after {
+  opacity: 1;
+}
 
 .keyboard-key.highlighted.kbr-menu-on > .visual-wrapper > span:after {
   display: none;
