Remove the big reflow when toggline evme-collection-visible. I could not find a case where overflow:hidden would still be required, but please let me know.

--- a/apps/homescreen/everything.me/modules/Collection/Collection.css
+++ b/apps/homescreen/everything.me/modules/Collection/Collection.css
@@ -58,7 +58,7 @@ body:not(.evme-loading):not(.evme-ready) #collection .evme-apps {
       not all e.me assets are loaded
     */
     #icongrid.evme-collection-visible {
-      display: none;
+      transform: translateY(-100%); /* move out of viewport */
     }
 
     .evmeScope #collection .header {
