Dont remove bgimage-overlay. The thing is that I cannot find where this element is actually ever displayed to the user. The background of collections comes from another element...

--- a/apps/homescreen/everything.me/modules/BackgroundImage/BackgroundImage.css
+++ b/apps/homescreen/everything.me/modules/BackgroundImage/BackgroundImage.css
@@ -127,6 +127,14 @@ body.evme-displayed #search-overlay:not(:empty){
             width: 5rem;
         }
 
+#bgimage-overlay.nosource .source {
+    visibility: hidden;
+}
+
+#bgimage-overlay.noquery h2 {
+    visibility: hidden;
+}
+
 .fullscreen-bgimage #search-header {
     display: none;
 }
