No reflows on the icons in the collections anymore (was 1 per icon)

--- a/apps/homescreen/style/dragdrop.css
+++ b/apps/homescreen/style/dragdrop.css
@@ -27,6 +27,10 @@
   margin-left: -0.15rem;
 }
 
+#collection .draggable img {
+  display: block;
+}
+
 #collection .draggable > div > span {
   margin-left: 0.2rem;
   margin-top: -0.2rem;
