--- a/apps/homescreen/everything.me/modules/Collection/Collection.css
+++ b/apps/homescreen/everything.me/modules/Collection/Collection.css
@@ -174,6 +174,7 @@ body:not(.evme-loading):not(.evme-ready) #collection .evme-apps {
       }
         .evmeScope #collection .evme-apps ul.static li .icon {
             transform: scale(1);
+            /* dimensions get set from code */
         }
 
     .evmeScope #collection #bgimage-overlay {
