--- a/apps/homescreen/style/dock.css
+++ b/apps/homescreen/style/dock.css
@@ -6,6 +6,9 @@
   z-index: 10000;
   background-color: rgba(0,0,0,.4);
   overflow: visible;
+  transform: translate3d(0, 0, 0);
+  transition: transform 0.3s ease-in;
+  will-change: transform;
 }
 
 #footer .dockWrapper {
